--- a/reports.html
+++ b/reports.html
@@ -58,6 +58,21 @@ h5 {
   color: #555;
 }
 
+
+/* ===== HEADER TYPOGRAPHY ===== */
+.learner-header h4 {
+  font-size: 22px;
+  font-weight: 800;
+  margin: 0;
+}
+
+.learner-header small {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+
+  
 .summary-box {
   background: #f3f6fa;
   border-left: 5px solid #3498db;
@@ -87,7 +102,7 @@ table {
   border-collapse: collapse;
   width: 100%;
   margin-top: 6px;
-  font-size: 0.85em;
+  font-size: 14px;
   table-layout: fixed;
   word-break: break-word;
 }
@@ -102,6 +117,12 @@ th {
   text-align: left;
 }
 
+th {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+  
 tr:last-child td {
   border-bottom: none;
 }
@@ -149,6 +170,14 @@ tr:last-child td {
 .report-overview h3 {
   font-size: 1.1em;
   line-height: 1.2em;
+}
+
+
+
+.report-overview h3 {
+  font-size: 24px;
+  font-weight: 800;
+  letter-spacing: 0.3px;
 }
 
   
