--- a/reports.html
+++ b/reports.html
@@ -1112,6 +1112,31 @@ clone.style.margin = "0 auto";
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
+
+    /* ===============================
+   OVERALL LEARNER AVERAGE
+================================ */
+const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
+const overallAvg =
+  subjectScores.length
+    ? subjectScores.reduce((a,b)=>a+b,0) / subjectScores.length
+    : 0;
+
+function overallLevel(score){
+  if (score >= 3.5) return "Exceeding Expectations";
+  if (score >= 2.5) return "Meeting Expectations";
+  if (score >= 1.5) return "Approaching Expectations";
+  return "Below Expectations";
+}
+
+function generalComment(score){
+  if (score >= 3.5) return "Excellent performance. Keep it up.";
+  if (score >= 2.5) return "Good progress. Continue working hard.";
+  if (score >= 1.5) return "Fair work. Aim higher next term.";
+  return "Needs more effort and support.";
+}
+
+
     /* ===============================
        COMMENT BY SCORE
     =============================== */
@@ -1136,7 +1161,7 @@ clone.style.margin = "0 auto";
       <thead>
         <tr>
           <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
-          <th style="border:1px solid #000;padding:6px;width:15%;">Average</th>
+          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
           <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
           <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
         </tr>
@@ -1171,6 +1196,60 @@ clone.style.margin = "0 auto";
     canvas.height = 160;
     canvas.style.marginTop = "14px";
     card.appendChild(canvas);
+
+/* ===============================
+   GENERAL PERFORMANCE BLOCK
+================================ */
+const generalBlock = document.createElement("div");
+generalBlock.style.marginTop = "14px";
+generalBlock.style.fontSize = "12px";
+
+generalBlock.innerHTML = `
+  <table style="width:100%;border-collapse:collapse;margin-top:8px;">
+    <tr>
+      <td style="border:1px solid #000;padding:6px;width:40%;">
+        <strong>Learner's General Performance Level</strong>
+      </td>
+      <td style="border:1px solid #000;padding:6px;">
+        ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
+      </td>
+    </tr>
+
+    <tr>
+      <td style="border:1px solid #000;padding:6px;">
+        <strong>Teacher's General Comment</strong>
+      </td>
+      <td style="border:1px solid #000;padding:12px;">
+        ${generalComment(overallAvg)}
+      </td>
+    </tr>
+  </table>
+
+  <div style="margin-top:18px;">
+    <div style="display:flex;justify-content:space-between;margin-top:20px;">
+      <div>
+        Closing Date: ____________________
+      </div>
+      <div>
+        Opening Date: ____________________
+      </div>
+    </div>
+
+    <div style="display:flex;justify-content:space-between;margin-top:30px;">
+      <div>
+        Class Teacher Signature: ____________________
+      </div>
+      <div>
+        Head of Institution Signature: ____________________
+      </div>
+    </div>
+  </div>
+`;
+
+card.appendChild(generalBlock);
+
+
+    
 
     new Chart(canvas, {
       type: "bar",
