--- a/reports.html
+++ b/reports.html
@@ -1074,30 +1074,16 @@ window.downloadPDF = async function () {
   const clone = reportDiv.cloneNode(true);
 
   /* ===============================
-     FETCH SUBJECT TERM TRENDS
-  =============================== */
-  const { data: subjectTrends } = await supabase
-    .from("subject_term_averages_view")
-    .select("admission_number, subject_name, term, average_score")
-    .eq("academic_year", SYSTEM_YEAR);
-
-  const subjectTrendMap = {};
-  subjectTrends?.forEach(r => {
-    const adm = r.admission_number;
-    const subject = r.subject_name;
-    subjectTrendMap[adm] ??= {};
-    subjectTrendMap[adm][subject] ??= {};
-    subjectTrendMap[adm][subject][r.term] = Number(r.average_score);
-  });
-
-  /* ===============================
      FORCE CLEAN A4 LAYOUT
   =============================== */
-  clone.style.width = "190mm";
-  clone.style.margin = "0 auto";
+clone.style.width = "190mm";
+clone.style.margin = "0 auto";
   clone.style.padding = "0";
   clone.style.boxSizing = "border-box";
 
+  /* ===============================
+     REMOVE DETAILED CONTENT
+  =============================== */
   clone.querySelectorAll(
     ".subject-block, .trend-box, ul, .split-block:not(.learner-header)"
   ).forEach(el => el.remove());
@@ -1105,11 +1091,12 @@ window.downloadPDF = async function () {
   const cards = clone.querySelectorAll(".learner-card");
 
   cards.forEach(card => {
-
+    /* ===== RESET CARD POSITION ===== */
     card.style.margin = "0";
     card.style.padding = "0";
     card.style.boxSizing = "border-box";
 
+    /* ===== STRONG HEADER ===== */
     const header = card.querySelector(".learner-header");
     if (header) {
       header.style.marginTop = "0";
@@ -1127,11 +1114,39 @@ window.downloadPDF = async function () {
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
+
+    /* ===============================
+   OVERALL LEARNER AVERAGE
+================================ */
+const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
+const overallAvg =
+  subjectScores.length
+    ? subjectScores.reduce((a,b)=>a+b,0) / subjectScores.length
+    : 0;
+
+function overallLevel(score){
+  if (score >= 3.5) return "Exceeding Expectations";
+  if (score >= 2.5) return "Meeting Expectations";
+  if (score >= 1.5) return "Approaching Expectations";
+  return "Below Expectations";
+}
+
+function generalComment(score){
+  if (score >= 3.5) return "Excellent performance. Keep it up.";
+  if (score >= 2.5) return "Good progress. Continue working hard.";
+  if (score >= 1.5) return "Fair work. Aim higher next term.";
+  return "Needs more effort and support.";
+}
+
+
+    /* ===============================
+       COMMENT BY SCORE
+    =============================== */
     function commentFromScore(score) {
       if (score >= 3.5) return "Excellent work";
       if (score >= 2.5) return "Good progress";
       if (score >= 1.5) return "Fair work";
-      return "Needs support";
+      return "Put more effort";
     }
 
     /* ===============================
@@ -1148,7 +1163,7 @@ window.downloadPDF = async function () {
       <thead>
         <tr>
           <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
-          <th style="border:1px solid #000;padding:6px;width:15%;">Average</th>
+          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
           <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
           <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
         </tr>
@@ -1177,61 +1192,80 @@ window.downloadPDF = async function () {
     card.appendChild(table);
 
     /* ===============================
-       ACHIEVEMENT BANDS BACKGROUND
-    =============================== */
-    const achievementBandsPlugin = {
-      id: "achievementBands",
-      beforeDraw(chart) {
-        const { ctx, chartArea: { top, bottom, left, right }, scales: { y } } = chart;
-        const bands = [
-          { from: 3.5, to: 4, color: "rgba(46, 204, 113, 0.08)" },
-          { from: 2.5, to: 3.49, color: "rgba(52, 152, 219, 0.08)" },
-          { from: 1.5, to: 2.49, color: "rgba(241, 196, 15, 0.08)" },
-          { from: 1, to: 1.49, color: "rgba(231, 76, 60, 0.08)" }
-        ];
-        bands.forEach(b => {
-          const yTop = y.getPixelForValue(b.to);
-          const yBottom = y.getPixelForValue(b.from);
-          ctx.fillStyle = b.color;
-          ctx.fillRect(left, yTop, right - left, yBottom - yTop);
-        });
-      }
-    };
-
-    /* ===============================
-       MULTI SUBJECT TREND GRAPH
+       COMBINED SUBJECT GRAPH
     =============================== */
     const canvas = document.createElement("canvas");
-    canvas.height = 180;
+    canvas.height = 160;
     canvas.style.marginTop = "14px";
     card.appendChild(canvas);
 
-    const learnerTrends = subjectTrendMap[studentName] || {};
-    const allTerms = ["Term 1", "Term 2", "Term 3"];
+/* ===============================
+   GENERAL PERFORMANCE BLOCK
+================================ */
+const generalBlock = document.createElement("div");
+generalBlock.style.marginTop = "14px";
+generalBlock.style.fontSize = "12px";
 
-    const datasets = Object.entries(learnerTrends).map(([subject, termsData]) => {
-      const color = getRandomColor(subject);
-      return {
-        label: subject,
-        data: allTerms.map(t => termsData[t] ?? null),
-        borderColor: color,
-        backgroundColor: color,
-        borderWidth: 2,
-        tension: 0,
-        pointRadius: 3
-      };
-    });
+generalBlock.innerHTML = `
+  <table style="width:100%;border-collapse:collapse;margin-top:8px;">
+    <tr>
+      <td style="border:1px solid #000;padding:6px;width:40%;">
+        <strong>Learner's General Performance Level</strong>
+      </td>
+      <td style="border:1px solid #000;padding:6px;">
+        ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
+      </td>
+    </tr>
+
+    <tr>
+      <td style="border:1px solid #000;padding:6px;">
+        <strong>Teacher's General Comment</strong>
+      </td>
+      <td style="border:1px solid #000;padding:12px;">
+        ${generalComment(overallAvg)}
+      </td>
+    </tr>
+  </table>
+
+  <div style="margin-top:18px;">
+    <div style="display:flex;justify-content:space-between;margin-top:20px;">
+      <div>
+        Closing Date: ____________________
+      </div>
+      <div>
+        Opening Date: ____________________
+      </div>
+    </div>
+
+    <div style="display:flex;justify-content:space-between;margin-top:30px;">
+      <div>
+        Class Teacher Signature: ____________________
+      </div>
+      <div>
+        Head of Institution Signature: ____________________
+      </div>
+    </div>
+  </div>
+`;
+
+card.appendChild(generalBlock);
+
+
+    
 
     new Chart(canvas, {
-      type: "line",
-      data: { labels: allTerms, datasets },
-      plugins: [achievementBandsPlugin],
+      type: "bar",
+      data: {
+        labels: Object.keys(subjectData),
+        datasets: [{
+          data: Object.values(subjectData).map(d => d.average_score),
+          backgroundColor: "#2c3e50"
+        }]
+      },
       options: {
         responsive: false,
         maintainAspectRatio: false,
-        plugins: {
-          legend: { position: "bottom" }
-        },
+        plugins: { legend: { display: false } },
         scales: {
           y: {
             min: 1,
@@ -1245,29 +1279,13 @@ window.downloadPDF = async function () {
         }
       }
     });
-
-    /* ===============================
-       GENERAL PERFORMANCE (LAST)
-    =============================== */
-    const generalBlock = document.createElement("div");
-    generalBlock.style.marginTop = "14px";
-    generalBlock.style.fontSize = "12px";
-    generalBlock.innerHTML = `
-      <b>Learner General Performance:</b> Consistent progress observed across learning areas.<br>
-      <b>Teacher's General Comment:</b> Keep working hard and maintain positive attitude.<br><br>
-      <b>Opening Date:</b> ____________ &nbsp;&nbsp;
-      <b>Closing Date:</b> ____________<br><br>
-      <b>Class Teacher Sign:</b> ____________ &nbsp;&nbsp;
-      <b>Head Teacher Sign:</b> ____________
-    `;
-    card.appendChild(generalBlock);
   });
 
   /* ===============================
-     EXPORT PDF
+     EXPORT PDF (TOP-ALIGNED)
   =============================== */
   html2pdf().set({
-    margin: [10, 10, 10, 10],
+    margin: [10, 10, 10, 10], // TOP, RIGHT, BOTTOM, LEFT
     filename,
     image: { type: "jpeg", quality: 0.98 },
     html2canvas: { scale: 2, scrollY: 0, useCORS: true },
@@ -1275,17 +1293,15 @@ window.downloadPDF = async function () {
   }).from(clone).save();
 };
 
-
-/* ===== CONSISTENT COLOR PER SUBJECT ===== */
+ 
+// ===== HELPER: RANDOM COLOR PER SUBJECT =====
 function getRandomColor(seed) {
+  // consistent color per subject
   let hash = 0;
-  for (let i = 0; i < seed.length; i++) {
-    hash = seed.charCodeAt(i) + ((hash << 5) - hash);
-  }
+  for (let i = 0; i < seed.length; i++) hash = seed.charCodeAt(i) + ((hash << 5) - hash);
   const c = (hash & 0x00FFFFFF).toString(16).toUpperCase();
   return "#" + "00000".substring(0, 6 - c.length) + c;
 }
-
 
   
 </script>
