--- a/reports.html
+++ b/reports.html
@@ -1061,7 +1061,6 @@ function getTrend(currentAvg, previousAvg) {
 }
 
 
-
 window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
@@ -1076,8 +1075,8 @@ window.downloadPDF = async function () {
   /* ===============================
      FORCE CLEAN A4 LAYOUT
   =============================== */
-clone.style.width = "190mm";
-clone.style.margin = "0 auto";
+  clone.style.width = "190mm";
+  clone.style.margin = "0 auto";
   clone.style.padding = "0";
   clone.style.boxSizing = "border-box";
 
@@ -1114,34 +1113,28 @@ clone.style.margin = "0 auto";
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
-
     /* ===============================
-   OVERALL LEARNER AVERAGE
-================================ */
-const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
-const overallAvg =
-  subjectScores.length
-    ? subjectScores.reduce((a,b)=>a+b,0) / subjectScores.length
-    : 0;
-
-function overallLevel(score){
-  if (score >= 3.5) return "Exceeding Expectations";
-  if (score >= 2.5) return "Meeting Expectations";
-  if (score >= 1.5) return "Approaching Expectations";
-  return "Below Expectations";
-}
-
-function generalComment(score){
-  if (score >= 3.5) return "Excellent performance. Keep it up.";
-  if (score >= 2.5) return "Good progress. Continue working hard.";
-  if (score >= 1.5) return "Fair work. Aim higher next term.";
-  return "Needs more effort and support.";
-}
-
-
-    /* ===============================
-       COMMENT BY SCORE
+       CALCULATE OVERALL AVERAGE
     =============================== */
+    const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
+    const overallAvg = subjectScores.length
+      ? subjectScores.reduce((a,b)=>a+b,0) / subjectScores.length
+      : 0;
+
+    function overallLevel(score){
+      if (score >= 3.5) return "Exceeding Expectations";
+      if (score >= 2.5) return "Meeting Expectations";
+      if (score >= 1.5) return "Approaching Expectations";
+      return "Below Expectations";
+    }
+
+    function generalComment(score){
+      if (score >= 3.5) return "Excellent performance. Keep it up.";
+      if (score >= 2.5) return "Good progress. Continue working hard.";
+      if (score >= 1.5) return "Fair work. Aim higher next term.";
+      return "Needs more effort and support.";
+    }
+
     function commentFromScore(score) {
       if (score >= 3.5) return "Excellent work";
       if (score >= 2.5) return "Good progress";
@@ -1188,89 +1181,60 @@ function generalComment(score){
         }).join("")}
       </tbody>
     `;
-card.appendChild(table);
 
-/* ===============================
-   GENERAL PERFORMANCE BLOCK (BOTTOM)
-================================ */
-const generalBlock = document.createElement("div");
-generalBlock.style.marginTop = "10px";
-generalBlock.style.fontSize = "11px";
-generalBlock.style.pageBreakInside = "avoid";
+    card.appendChild(table);
 
-generalBlock.innerHTML = `
-  <table style="width:100%;border-collapse:collapse;margin-top:6px;">
-    <tr>
-      <td style="border:1px solid #000;padding:5px;width:40%;">
-        <strong>Learner's General Performance Level</strong>
-      </td>
-      <td style="border:1px solid #000;padding:5px;">
-        ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
-      </td>
-    </tr>
+    /* ===============================
+       GENERAL PERFORMANCE BLOCK AT BOTTOM
+    =============================== */
+    const generalBlock = document.createElement("div");
+    generalBlock.style.marginTop = "14px";
+    generalBlock.style.fontSize = "12px";
 
-    <tr>
-      <td style="border:1px solid #000;padding:5px;">
-        <strong>Teacher's General Comment</strong>
-      </td>
-      <td style="border:1px solid #000;padding:10px;">
-        ${generalComment(overallAvg)}
-      </td>
-    </tr>
-  </table>
+    generalBlock.innerHTML = `
+      <table style="width:100%;border-collapse:collapse;margin-top:8px;">
+        <tr>
+          <td style="border:1px solid #000;padding:6px;width:40%;">
+            <strong>Learner's General Performance Level</strong>
+          </td>
+          <td style="border:1px solid #000;padding:6px;">
+            ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
+          </td>
+        </tr>
 
-  <div style="margin-top:12px;">
-    <div style="display:flex;justify-content:space-between;margin-top:12px;">
-      <div>Closing Date: ____________</div>
-      <div>Opening Date: ____________</div>
-    </div>
+        <tr>
+          <td style="border:1px solid #000;padding:6px;">
+            <strong>Teacher's General Comment</strong>
+          </td>
+          <td style="border:1px solid #000;padding:12px;">
+            ${generalComment(overallAvg)}
+          </td>
+        </tr>
+      </table>
 
-    <div style="display:flex;justify-content:space-between;margin-top:18px;">
-      <div>Class Teacher Signature: ____________</div>
-      <div>Head of Institution Signature: ____________</div>
-    </div>
-  </div>
-`;
+      <div style="margin-top:18px;">
+        <div style="display:flex;justify-content:space-between;margin-top:20px;">
+          <div>
+            Closing Date: ____________________
+          </div>
+          <div>
+            Opening Date: ____________________
+          </div>
+        </div>
 
-card.appendChild(generalBlock);
+        <div style="display:flex;justify-content:space-between;margin-top:30px;">
+          <div>
+            Class Teacher Signature: ____________________
+          </div>
+          <div>
+            Head of Institution Signature: ____________________
+          </div>
+        </div>
+      </div>
+    `;
 
-/* ===============================
-   GRAPH LAST (OPTIONAL)
-================================ */
-const canvas = document.createElement("canvas");
-canvas.height = 120; // reduced height
-canvas.style.marginTop = "8px";
-card.appendChild(canvas);
+    card.appendChild(generalBlock);
 
-
-    
-
-    new Chart(canvas, {
-      type: "bar",
-      data: {
-        labels: Object.keys(subjectData),
-        datasets: [{
-          data: Object.values(subjectData).map(d => d.average_score),
-          backgroundColor: "#2c3e50"
-        }]
-      },
-      options: {
-        responsive: false,
-        maintainAspectRatio: false,
-        plugins: { legend: { display: false } },
-        scales: {
-          y: {
-            min: 1,
-            max: 4,
-            ticks: {
-              stepSize: 1,
-              callback: v =>
-                ["", "Below", "Approaching", "Meeting", "Exceeding"][v]
-            }
-          }
-        }
-      }
-    });
   });
 
   /* ===============================
@@ -1284,20 +1248,7 @@ card.appendChild(canvas);
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
   }).from(clone).save();
 };
-
- 
-// ===== HELPER: RANDOM COLOR PER SUBJECT =====
-function getRandomColor(seed) {
-  // consistent color per subject
-  let hash = 0;
-  for (let i = 0; i < seed.length; i++) hash = seed.charCodeAt(i) + ((hash << 5) - hash);
-  const c = (hash & 0x00FFFFFF).toString(16).toUpperCase();
-  return "#" + "00000".substring(0, 6 - c.length) + c;
-}
-
   
 </script>
-
-
 </body>
 </html>
