--- a/reports.html
+++ b/reports.html
@@ -1060,7 +1060,6 @@ function getTrend(currentAvg, previousAvg) {
   return "➖ Stable";
 }
 
-
 window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
@@ -1072,30 +1071,28 @@ window.downloadPDF = async function () {
 
   const clone = reportDiv.cloneNode(true);
 
-  /* ===============================
-     FORCE CLEAN A4 LAYOUT
-  =============================== */
-  clone.style.width = "190mm";
+  // ===============================
+  // FORCE CLEAN A4 LAYOUT
+  // ===============================
+  clone.style.width = "180mm"; // slightly smaller to respect margins
   clone.style.margin = "0 auto";
   clone.style.padding = "0";
   clone.style.boxSizing = "border-box";
 
-  /* ===============================
-     REMOVE DETAILED CONTENT
-  =============================== */
-  clone.querySelectorAll(
-    ".subject-block, .trend-box, ul, .split-block:not(.learner-header)"
-  ).forEach(el => el.remove());
+  // ===============================
+  // REMOVE DETAILED CONTENT
+  // ===============================
+  clone.querySelectorAll(".subject-block, .trend-box").forEach(el => el.remove());
 
   const cards = clone.querySelectorAll(".learner-card");
 
   cards.forEach(card => {
-    /* ===== RESET CARD POSITION ===== */
     card.style.margin = "0";
     card.style.padding = "0";
     card.style.boxSizing = "border-box";
+    card.style.pageBreakAfter = "always"; // force page break per learner
 
-    /* ===== STRONG HEADER ===== */
+    // ===== HEADER =====
     const header = card.querySelector(".learner-header");
     if (header) {
       header.style.marginTop = "0";
@@ -1113,38 +1110,17 @@ window.downloadPDF = async function () {
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
-    /* ===============================
-       CALCULATE OVERALL AVERAGE
-    =============================== */
-    const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
+    // ===============================
+    // CALCULATE OVERALL AVERAGE
+    // ===============================
+    const subjectScores = Object.values(subjectData).map(d => Number(d.average_score) || 0);
     const overallAvg = subjectScores.length
-      ? subjectScores.reduce((a,b)=>a+b,0) / subjectScores.length
+      ? subjectScores.reduce((a, b) => a + b, 0) / subjectScores.length
       : 0;
 
-    function overallLevel(score){
-      if (score >= 3.5) return "Exceeding Expectations";
-      if (score >= 2.5) return "Meeting Expectations";
-      if (score >= 1.5) return "Approaching Expectations";
-      return "Below Expectations";
-    }
-
-    function generalComment(score){
-      if (score >= 3.5) return "Excellent performance. Keep it up.";
-      if (score >= 2.5) return "Good progress. Continue working hard.";
-      if (score >= 1.5) return "Fair work. Aim higher next term.";
-      return "Needs more effort and support.";
-    }
-
-    function commentFromScore(score) {
-      if (score >= 3.5) return "Excellent work";
-      if (score >= 2.5) return "Good progress";
-      if (score >= 1.5) return "Fair work";
-      return "Put more effort";
-    }
-
-    /* ===============================
-       SUMMARY TABLE
-    =============================== */
+    // ===============================
+    // SUMMARY TABLE
+    // ===============================
     const table = document.createElement("table");
     table.style.width = "100%";
     table.style.borderCollapse = "collapse";
@@ -1163,7 +1139,7 @@ window.downloadPDF = async function () {
       </thead>
       <tbody>
         ${Object.entries(subjectData).map(([subject, d]) => {
-          const avg = Number(d.average_score);
+          const avg = Number(d.average_score) || 0;
           return `
             <tr>
               <td style="border:1px solid #000;padding:6px;">${subject}</td>
@@ -1182,15 +1158,37 @@ window.downloadPDF = async function () {
       </tbody>
     `;
 
+    // ===============================
+    // EXTRACT STRENGTHS / NEEDS / TREND
+    // ===============================
+    const trendText = card.querySelector(".split-block p")?.innerText || "🆕 New Entry";
+
+    const strengthsEl = Array.from(card.querySelectorAll(".split-block p strong"))
+      .find(el => el.textContent.includes("💪 Strengths"));
+    const strengthsText = strengthsEl ? strengthsEl.parentNode.innerText.replace("💪 Strengths:", "").trim() : "";
+
+    const needsEl = Array.from(card.querySelectorAll(".split-block p strong"))
+      .find(el => el.textContent.includes("🎯 Areas for Improvement"));
+    const needsText = needsEl ? needsEl.parentNode.innerText.replace("🎯 Areas for Improvement:", "").trim() : "";
+
+    const summaryBlock = document.createElement("div");
+    summaryBlock.style.marginBottom = "12px";
+    summaryBlock.style.fontSize = "12px";
+    summaryBlock.innerHTML = `
+      <p style="margin:4px 0;font-weight:bold;">${trendText}</p>
+      ${strengthsText ? `<p>💪 Strengths: ${strengthsText}</p>` : ""}
+      ${needsText ? `<p>🎯 Areas for Improvement: ${needsText}</p>` : ""}
+    `;
+
+    card.insertBefore(summaryBlock, table);
     card.appendChild(table);
 
-    /* ===============================
-       GENERAL PERFORMANCE BLOCK AT BOTTOM
-    =============================== */
+    // ===============================
+    // GENERAL PERFORMANCE BLOCK
+    // ===============================
     const generalBlock = document.createElement("div");
     generalBlock.style.marginTop = "14px";
     generalBlock.style.fontSize = "12px";
-
     generalBlock.innerHTML = `
       <table style="width:100%;border-collapse:collapse;margin-top:8px;">
         <tr>
@@ -1201,7 +1199,6 @@ window.downloadPDF = async function () {
             ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
           </td>
         </tr>
-
         <tr>
           <td style="border:1px solid #000;padding:6px;">
             <strong>Teacher's General Comment</strong>
@@ -1214,40 +1211,54 @@ window.downloadPDF = async function () {
 
       <div style="margin-top:18px;">
         <div style="display:flex;justify-content:space-between;margin-top:20px;">
-          <div>
-            Closing Date: ____________________
-          </div>
-          <div>
-            Opening Date: ____________________
-          </div>
+          <div>Closing Date: ____________________</div>
+          <div>Opening Date: ____________________</div>
         </div>
-
         <div style="display:flex;justify-content:space-between;margin-top:30px;">
-          <div>
-            Class Teacher Signature: ____________________
-          </div>
-          <div>
-            Head of Institution Signature: ____________________
-          </div>
+          <div>Class Teacher Signature: ____________________</div>
+          <div>Head of Institution Signature: ____________________</div>
         </div>
       </div>
     `;
-
     card.appendChild(generalBlock);
 
+    // ===============================
+    // HELPER FUNCTIONS
+    // ===============================
+    function overallLevel(score) {
+      if (score >= 3.5) return "Exceeding Expectations";
+      if (score >= 2.5) return "Meeting Expectations";
+      if (score >= 1.5) return "Approaching Expectations";
+      return "Below Expectations";
+    }
+
+    function generalComment(score) {
+      if (score >= 3.5) return "Excellent performance. Keep it up.";
+      if (score >= 2.5) return "Good progress. Continue working hard.";
+      if (score >= 1.5) return "Fair work. Aim higher next term.";
+      return "Needs more effort and support.";
+    }
+
+    function commentFromScore(score) {
+      if (score >= 3.5) return "Excellent work";
+      if (score >= 2.5) return "Good progress";
+      if (score >= 1.5) return "Fair work";
+      return "Put more effort";
+    }
   });
 
-  /* ===============================
-     EXPORT PDF (TOP-ALIGNED)
-  =============================== */
+  // ===============================
+  // EXPORT PDF
+  // ===============================
   html2pdf().set({
-    margin: [10, 10, 10, 10], // TOP, RIGHT, BOTTOM, LEFT
+    margin: [10, 10, 10, 10],
     filename,
     image: { type: "jpeg", quality: 0.98 },
     html2canvas: { scale: 2, scrollY: 0, useCORS: true },
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
   }).from(clone).save();
 };
+
   
 </script>
 </body>
