--- a/reports.html
+++ b/reports.html
@@ -1061,7 +1061,6 @@ function getTrend(currentAvg, previousAvg) {
 }
 
 
-
 window.downloadPDF = async function () {
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
@@ -1098,6 +1097,7 @@ window.downloadPDF = async function () {
       header.style.fontWeight = "700";
     }
 
+    // Get student name
     const studentName = card.querySelector("h4")?.innerText
       .replace("👤", "")
       .replace(/\(.*?\)/, "")
@@ -1106,46 +1106,39 @@ window.downloadPDF = async function () {
     const subjectData = avgMap?.[studentName];
     if (!subjectData) return;
 
+    // ===== CALCULATE OVERALL AVERAGE =====
     const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
     const overallAvg = subjectScores.length
       ? subjectScores.reduce((a, b) => a + b, 0) / subjectScores.length
       : 0;
 
-    // ===== EXTRACT CLEAN SUMMARY =====
-    const summaryBlock = document.createElement("div");
-    summaryBlock.style.marginBottom = "2px"; // very small gap
-    summaryBlock.style.fontSize = "11px";    // smaller font for parent view
+    // ===== EXTRACT TREND, STRENGTHS & NEEDS =====
+    let trendText = card.querySelector(".split-block p")?.innerText || "";
+    trendText = trendText.replace(/^📊 Progress Trend:.*$/m, "").trim();
 
-    let trendText = "", strengthsText = "", needsText = "";
-    const paragraphs = card.querySelectorAll(".split-block p");
-
-    paragraphs.forEach(p => {
-      const text = p.innerText || "";
-
-      // Skip teacher action lines
-      if (/Teacher Actions/i.test(text)) return;
-
-      // Keep only first Progress Trend
-      if (/📊 Progress Trend/i.test(text)) {
-        if (!trendText) trendText = text.replace(/^📊 Progress Trend:\s*/, "");
-        return;
-      }
-
-      if (/💪 Strengths/i.test(text)) {
-        strengthsText = text.replace(/💪 Strengths:|Life Skills, English, Kiswahili/g, "").trim();
-        return;
-      }
-
-      if (/🎯 Areas for Improvement/i.test(text)) {
-        needsText = text.replace(/🎯 Areas for Improvement:/, "").trim();
-        return;
+    let strengthsText = "";
+    let needsText = "";
+    const strongElems = card.querySelectorAll(".split-block p strong");
+    strongElems.forEach(el => {
+      const text = el.innerText;
+      const parentText = el.parentNode?.innerText || "";
+      if (text.includes("💪 Strengths")) {
+        strengthsText = parentText.replace("💪 Strengths:", "").trim();
+      } else if (text.includes("🎯 Areas for Improvement")) {
+        needsText = parentText.replace("🎯 Areas for Improvement:", "").trim();
       }
     });
 
+    strengthsText = strengthsText.replace(/Life Skills, English, Kiswahili/g, "").trim();
+
+    // ===== SUMMARY BLOCK =====
+    const summaryBlock = document.createElement("div");
+    summaryBlock.style.marginBottom = "6px";
+    summaryBlock.style.fontSize = "11px";
     summaryBlock.innerHTML = `
-      ${trendText ? `<p style="margin:0;font-weight:bold;">${trendText}</p>` : ""}
-      ${strengthsText ? `<p style="margin:0;">💪 Strengths: ${strengthsText}</p>` : ""}
-      ${needsText ? `<p style="margin:0;">🎯 Areas for Improvement: ${needsText}</p>` : ""}
+      ${trendText ? `<p style="margin:2px 0;font-weight:bold;">${trendText}</p>` : ""}
+      ${strengthsText ? `<p style="margin:2px 0;">💪 Strengths: ${strengthsText}</p>` : ""}
+      ${needsText ? `<p style="margin:2px 0;">🎯 Areas for Improvement: ${needsText}</p>` : ""}
     `;
 
     // ===== HELPER FUNCTIONS =====
@@ -1170,7 +1163,7 @@ window.downloadPDF = async function () {
       return "Put more effort";
     }
 
-    // ===== SUMMARY TABLE =====
+    // ===== SUBJECT TABLE =====
     const table = document.createElement("table");
     table.style.width = "100%";
     table.style.borderCollapse = "collapse";
@@ -1240,10 +1233,15 @@ window.downloadPDF = async function () {
       </div>
     `;
 
+    // ===== FORCE SECOND PAGE FOR TABLE + GENERAL BLOCK =====
+    const secondPageContainer = document.createElement("div");
+    secondPageContainer.style.pageBreakBefore = "always"; // always start on new page
+    secondPageContainer.appendChild(table);
+    secondPageContainer.appendChild(generalBlock);
+
     // ===== APPEND ELEMENTS =====
-    card.appendChild(summaryBlock);
-    card.appendChild(table);
-    card.appendChild(generalBlock);
+    card.appendChild(summaryBlock);           // first page content
+    card.appendChild(secondPageContainer);    // second page content
   });
 
   // ===== EXPORT PDF =====
@@ -1255,6 +1253,7 @@ window.downloadPDF = async function () {
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
   }).from(clone).save();
 };
+
 
 </script>
 </body>
