--- a/reports.html
+++ b/reports.html
@@ -210,7 +210,7 @@ tr:last-child td {
 
 <div class="actions-box">
 
-  <button onclick="downloadPDF()">⬇️ Download PDF</button>
+  <button onclick="downloadPDF()">⬇️ Download Summary report PDF</button>
 </div>
 
   
