--- a/reports.html
+++ b/reports.html
@@ -208,8 +208,8 @@ tr:last-child td {
 <hr />
 
 <div class="actions-box">
-  <button onclick="downloadPDF()">⬇️ Download Summary PDF</button>
-  <button onclick="downloadDetailedPDF()">⬇️ Download Detailed PDF</button>
+  <button onclick="downloadPDF()">⬇️ Download Report Form(s)(Recommended)</button>
+  <button onclick="downloadDetailedPDF()">⬇️ Download Detailed Report</button>
 </div>
 
   
